thumbnails: make sure to cache all mime types from gdk-pixbuf

G_N_ELEMENTS() does not work for heap-allocated arrays, and always
returns 1, so we were not actually caching all the supported mime types
for a specific pixbuf loader after the first.
This should also fix nautilus not thumbnailing e.g. compressed SVG
images, as reported in [1].

[1] https://bugzilla.gnome.org/show_bug.cgi?id=655406